# snarfx

./: LICENSE  README.md  pyproject.toml
docs/: textual.md
src/snarfx/: __init__.py  _anchor.py  _tracking.py  action.py  computed.py  hot_reload.py  observable.py  reaction.py  store.py  stream.py  textual.py  watch.py
tests/: test_action.py  test_computed.py  test_hot_reload.py  test_observable.py  test_reaction.py  test_store.py  test_stream.py  test_textual.py  test_watch.py
