[project]
name = "snarfx"
version = "0.1.0"
description = "MobX-inspired reactive state management for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
keywords = ["reactive", "state", "observable", "computed", "mobx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/brandon-fryslie/snarfx"
Repository = "https://github.com/brandon-fryslie/snarfx"
Issues = "https://github.com/brandon-fryslie/snarfx/issues"

[project.optional-dependencies]
textual = ["textual"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snarfx"]

[tool.hatch.build.targets.sdist]
exclude = [".beads/", "AGENTS.md", "uv.lock"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
